syntax = 'proto3';

package thread;

option go_package = "github.com/habiliai/agentruntime/thread";

import "google/protobuf/timestamp.proto";

service ThreadManager {
  rpc CreateThread(CreateThreadRequest) returns (CreateThreadResponse);
  rpc GetThread(GetThreadRequest) returns (GetThreadResponse);

  rpc AddMessage(AddMessageRequest) returns (AddMessageResponse);
}

message AddMessageRequest {
  uint32 thread_id = 1;
  string message = 2;
}

message AddMessageResponse {
  uint32 message_id = 1;
}

message CreateThreadRequest {
  string instruction = 1;
}

message CreateThreadResponse {
  uint32 thread_id = 1;
}

message GetThreadRequest {
  uint32 thread_id = 1;
}

message GetThreadResponse {
  Thread thread = 1;
}

message Thread {
  uint32 id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp updated_at = 3;
  string instruction = 4;
}